--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -49,6 +49,17 @@
                 </span>
             </div>
             <div class="my-6">
+                {{ form_label(registrationForm.avatar,'Avatar', {
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                }) }}
+                <div class="mt-1">
+                    {{ form_widget(registrationForm.avatar, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                </div>
+                <span class="text-sm text-red-600 italic">
+                    {{ form_errors(registrationForm.avatar) }}
+                </span>
+            </div>
+            <div class="my-6">
                 {{ form_label(registrationForm.plainPassword,'Mot de passe', {
                     'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
                 }) }}
