--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body class="h-full">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                {{ include('_alert.html.twig', { color : label, flashText : message}) }}
+            {% endfor %}
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
