--- a/templates/home/_button_registerOrConnected.html.twig
+++ b/templates/home/_button_registerOrConnected.html.twig
@@ -8,9 +8,13 @@
                 </div>
             </div>
         </div>
-        <div class="mt-5 sm:mt-6 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
-            <a href="{{ path('app_register') }}" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-base font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2 sm:text-sm">Inscription</a>
-            <a href="#" class="mt-3 w-full inline-flex justify-center rounded-md border border-shy-500 shadow-sm px-4 py-2 bg-sky-500 text-base font-medium text-white hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500 sm:mt-0 sm:col-start-1 sm:text-sm">Connexion</a>
+        <div class="mt-5 sm:mt-6 sm:grid {{ app.user ? 'sm:grid-cols-1' : 'sm:grid-cols-2' }}  sm:gap-3 sm:grid-flow-row-dense">
+            {% if app.user %}
+                <a href="{{ path('app_logout') }}" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">Déconnexion</a>
+            {% else %}
+                <a href="{{ path('app_register') }}" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-base font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2 sm:text-sm">Inscription</a>
+                <a href="{{ path('app_login') }}" class="mt-3 w-full inline-flex justify-center rounded-md border border-shy-500 shadow-sm px-4 py-2 bg-sky-500 text-base font-medium text-white hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500 sm:mt-0 sm:col-start-1 sm:text-sm">Connexion</a>
+            {% endif %}
         </div>
     </div>
 </div>
