--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
     <div class="max-w-full mx-10 lg:max-w-md lg:mx-auto">
 
         <h1 class="my-3 font-bold text-2xl md:text-4xl">Inscription</h1>
-        <h3 class="my-2 text-xl md:text-2xl font-light">Créer votre compte Interactions Lag</h3>
+        <h3 class="my-2 text-xl md:text-2xl font-light">Créer votre compte Interactions Lab</h3>
         <p class="prose">Afin d'accéder à l'application et de commencé l'expérience</p>
 
         <div class="grid grid-cols-1 gap-6">
@@ -71,7 +71,7 @@
                 </span>
             </div>
             <div class="flex flex-col justify-center py-6">
-                <button type="submit" class="w-2/4 block mx-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-lg md:text-md font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2">Register</button>
+                <button type="submit" class="w-2/4 block mx-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-lg md:text-md font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2">Enregistrer</button>
                 <a href="{{ path('app_home') }}" class="w-2/4 block mx-auto text-center my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer">Retour Accueil</a>
             </div>
             {{ form_end(registrationForm) }}
