--- a/templates/_alert.html.twig
+++ b/templates/_alert.html.twig
@@ -11,7 +11,7 @@
         </div>
         <div class="ml-auto pl-3">
             <div class="-mx-1.5 -my-1.5">
-                <button type="button" class="inline-flex bg-{{color}}-50 rounded-md p-1.5 text-{{color}}-500 hover:bg-{{color}}-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-{{color}}-50 focus:ring-{{color}}-600">
+                <button id="dismissAlertButton" type="button" class="inline-flex bg-{{color}}-50 rounded-md p-1.5 text-{{color}}-500 hover:bg-{{color}}-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-{{color}}-50 focus:ring-{{color}}-600">
                     <span class="sr-only">Dismiss</span>
                     <!-- Heroicon name: solid/x -->
                     <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
