--- a/templates/home/interactionPage.html.twig
+++ b/templates/home/interactionPage.html.twig
@@ -1,1 +1,90 @@
 {% extends 'base.html.twig' %}
+{% block title %}Interactions{% endblock %}
+{% set name = app.user.firstname|capitalize ~ ' ' ~ app.user.lastname|capitalize %}
+{% block body %}
+    <h1>Interaction</h1>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <!-- User interaction --->
+        <div class="bg-gray-300 bg-opacity-30 rounded-lg m-5">
+            <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24">
+                <div class="space-y-12">
+
+                    <ul role="list" class="space-y-12 lg:grid lg:grid-cols-2 lg:items-start lg:gap-x-8 lg:gap-y-12 lg:space-y-0">
+                        <li>
+                            <div class="space-y-4 sm:grid sm:grid-cols-3 sm:gap-6 sm:space-y-0 lg:gap-8">
+                                <div class="h-0 aspect-w-3 aspect-h-2 sm:aspect-w-3 sm:aspect-h-4">
+                                    {% if app.user.avatar is defined and app.user.avatar is not null %}
+                                        <img class="object-cover shadow-lg rounded-lg" src="{{ asset('images/avatars/' ~ app.user.avatar ) }}" alt="avatar-{{ app.user.firstname }}">
+                                    {% else %}
+                                        <img class="object-cover shadow-lg rounded-lg" src="{{ asset('images/avatars/avatar_default.jpg') }}" alt="avatar-default">
+                                    {% endif %}
+                                </div>
+                                <div class="sm:col-span-2">
+                                    <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl">Bonjour {{ name }}!</h2>
+                                    <div class="space-y-4 prose">
+                                        <div class="text-lg">
+                                            <div class="text-lg leading-6 font-medium space-y-1">
+                                                <p class="text-gray-500">Copywriter</p>
+                                            </div>
+                                            <p class="text-gray-600">Personne n'a encore écrit de feedback à votre sujet.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Team interaction --->
+        <div class="max-w-6xl mx-auto">
+            <div class="bg-white overflow-hidden p-4">
+                <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5">
+                    {% for interaction in interactions %}
+                        {% if interaction != user %}
+                            <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow-lg divide-y divide-gray-200">
+                                <div class="flex-1 flex flex-col p-8">
+                                    {% if interaction.avatar is defined and interaction.avatar is not null %}
+                                    <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
+                                         src="{{ asset('images/avatars/' ~ interaction.avatar ) }}"
+                                         alt="{{ 'avatar-' ~ interaction.firstname }}">
+                                    {% else %}
+                                        <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
+                                             src="{{ asset('images/avatars/avatar_default.jpg') }}"
+                                             alt="">
+                                    {% endif %}
+                                    <h3 class="mt-6 text-gray-900 text-sm font-medium">{{ (interaction.firstname ~ ' ' ~ interaction.lastname)|capitalize }}</h3>
+                                    <!--
+                                    Si on souhaite afficher des infos supplémentaire
+
+                                    <dl class="mt-1 flex-grow flex flex-col justify-between">
+                                        <dt class="sr-only">Title</dt>
+                                        <dd class="text-gray-500 text-sm">Paradigm Representative</dd>
+                                        <dt class="sr-only">Role</dt>
+                                        <dd class="mt-3">
+                                          <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
+                                        </dd>
+                                    </dl>
+                                    --->
+                                </div>
+                                <div>
+                                    <div class="-mt-px flex divide-x divide-gray-200">
+                                        <div class="-ml-px w-0 flex-1 flex hover:bg-slate-700 hover:opacity-30 hover:rounded-br-lg hover:rounded-bl-lg focus:bg-slate-700 focus:opacity-30 focus:rounded-br-lg focus:rounded-bl-lg">
+                                            <a href="#" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-100">
+                                                <!-- Heroicon name: solid/phone -->
+                                                <span class="ml-3">Feedback</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+
+            </div>
+        </div>
+    </div>
+{% endblock %}
