--- a/templates/home/_button_registerOrConnected.html.twig
+++ b/templates/home/_button_registerOrConnected.html.twig
@@ -1,10 +1,10 @@
-<div class="flex justify-center">
-    <div class="inline-block bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform sm:my-8 sm:max-w-lg sm:w-full sm:p-6">
+<div class="flex justify-center ">
+    <div class="inline-block bg-white dark:bg-slate-600 rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform sm:my-8 sm:max-w-lg sm:w-full sm:p-6">
         <div>
             <div class="mt-3 text-center sm:mt-5">
-                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Participer à l'expérimentation</h3>
+                <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-black" id="modal-title">Participer à l'expérimentation</h3>
                 <div class="mt-2">
-                    <p class="text-sm text-gray-500">Faites le choix de participer en vous inscrivant ou si vous avez déjà un compte alors c'est parti.</p>
+                    <p class="text-sm text-gray-500 dark:text-gray-300">Faites le choix de participer en vous inscrivant ou si vous avez déjà un compte alors c'est parti.</p>
                 </div>
             </div>
         </div>
@@ -12,8 +12,57 @@
             {% if app.user %}
                 <a href="{{ path('app_logout') }}" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">Déconnexion</a>
             {% else %}
-                <a href="{{ path('app_register') }}" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-base font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2 sm:text-sm">Inscription</a>
-                <a href="{{ path('app_login') }}" class="mt-3 w-full inline-flex justify-center rounded-md border border-shy-500 shadow-sm px-4 py-2 bg-sky-500 text-base font-medium text-white hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500 sm:mt-0 sm:col-start-1 sm:text-sm">Connexion</a>
+                <a href="{{ path('app_register') }}" class="
+                w-full
+                inline-flex
+                justify-center
+                rounded-md
+                border
+                border-transparent
+                shadow-sm
+                px-4
+                py-2
+                bg-emerald-600
+                text-base
+                font-medium
+                text-white
+                dark:bg-emerald-700
+                dark:hover:bg-emerald-800
+                dark:focus:ring-emerald-900
+                hover:bg-emerald-700
+                focus:outline-none
+                focus:ring-2
+                focus:ring-offset-2
+                focus:ring-emerald-500
+                sm:col-start-2
+                sm:text-sm">Inscription</a>
+                <a href="{{ path('app_login') }}" class="
+                mt-3
+                w-full
+                inline-flex
+                justify-center
+                rounded-md
+                border
+                border-shy-500
+                shadow-sm
+                px-4
+                py-2
+                bg-sky-500
+                text-base
+                font-medium
+                text-white
+                dark:border-transparent
+                dark:bg-sky-700
+                dark:hover:bg-sky-800
+                dark:focus:ring-sky-900
+                hover:bg-sky-700
+                focus:outline-none
+                focus:ring-2
+                focus:ring-offset-2
+                focus:ring-sky-500
+                sm:mt-0
+                sm:col-start-1
+                sm:text-sm">Connexion</a>
             {% endif %}
         </div>
     </div>
