--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,18 +9,18 @@
     <h2 class="m-5 leading-6 text-indigo-600 font-semibold tracking-wide uppercase">Interations Lab</h2>
     <div class="max-w-full mx-10 lg:max-w-md lg:mx-auto">
 
-        <h1 class="my-3 font-bold text-2xl md:text-4xl">Inscription</h1>
-        <h3 class="my-2 text-xl md:text-2xl font-light">Créer votre compte Interactions Lab</h3>
-        <p class="prose">Afin d'accéder à l'application et de commencé l'expérience</p>
+        <h1 class="my-3 font-bold text-2xl md:text-4xl dark:text-gray-300">Inscription</h1>
+        <h3 class="my-2 text-xl md:text-2xl font-light dark:text-gray-100">Créer votre compte Interactions Lab</h3>
+        <p class="prose dark:text-gray-100">Afin d'accéder à l'application et de commencé l'expérience</p>
 
         <div class="grid grid-cols-1 gap-6">
             {{ form_start(registrationForm) }}
             <div class="my-6">
                 {{ form_label(registrationForm.firstname,'Nom', {
-                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.firstname, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                    {{ form_widget(registrationForm.firstname, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.firstname) }}
@@ -28,10 +28,10 @@
             </div>
             <div class="my-6">
                 {{ form_label(registrationForm.lastname,'Prénom', {
-                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.lastname, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                    {{ form_widget(registrationForm.lastname, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.lastname) }}
@@ -39,10 +39,10 @@
             </div>
             <div class="my-6">
                 {{ form_label(registrationForm.email,'Email', {
-                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.email, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                    {{ form_widget(registrationForm.email, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.email) }}
@@ -50,10 +50,10 @@
             </div>
             <div class="my-6">
                 {{ form_label(registrationForm.avatar,'Avatar', {
-                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.avatar, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                    {{ form_widget(registrationForm.avatar, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.avatar) }}
@@ -61,18 +61,18 @@
             </div>
             <div class="my-6">
                 {{ form_label(registrationForm.plainPassword,'Mot de passe', {
-                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700'}
+                    'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md' }}) }}
+                    {{ form_widget(registrationForm.plainPassword, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.plainPassword) }}
                 </span>
             </div>
             <div class="flex flex-col justify-center py-6">
-                <button type="submit" class="w-2/4 block mx-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-lg md:text-md font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2">Enregistrer</button>
-                <a href="{{ path('app_home') }}" class="w-2/4 block mx-auto text-center my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer">Retour Accueil</a>
+                <button type="submit" class="w-2/4 block mx-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-emerald-600 text-lg md:text-md font-medium text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500 sm:col-start-2 dark:bg-emerald-700 dark:hover:bg-emerald-800 dark:focus:ring-emerald-900">Enregistrer</button>
+                <a href="{{ path('app_home') }}" class="w-2/4 block mx-auto text-center text-black my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer dark:text-white">Retour Accueil</a>
             </div>
             {{ form_end(registrationForm) }}
         </div>
