--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .success{
+        @apply
+        bg-green-300
+        dark:bg-green-400
+        hover:bg-green-100
+    }
+}
