--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -16,7 +16,38 @@
             </div>
         </div>
         <div class="ml-4 mt-2 flex-shrink-0">
+            {% if app.user %}
             <a href="{{ path('app_logout') }}" class="relative inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">Déconnexion</a>
+            {% else %}
+            <a href="{{ path('app_login') }}" class="
+                mt-3
+                w-full
+                inline-flex
+                justify-center
+                rounded-md
+                border
+                border-shy-500
+                shadow-sm
+                px-4
+                py-2
+                bg-sky-500
+                text-base
+                font-medium
+                text-white
+                dark:border-transparent
+                dark:bg-sky-700
+                dark:hover:bg-sky-800
+                dark:focus:ring-sky-900
+                hover:bg-sky-700
+                focus:outline-none
+                focus:ring-2
+                focus:ring-offset-2
+                focus:ring-sky-500
+                sm:mt-0
+                sm:col-start-1
+                sm:text-sm">Connexion</a>
+            {% endif %}
+
         </div>
     </div>
 </div>
