--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block body %}
     {% if error %}
@@ -17,7 +17,7 @@
             <div class="my-6 dark:text-gray-100">
                 <label for="username" class="block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300">Email</label>
                 <div class="mt-1">
-                    <input type="text" name="_username" id="username" value="{{ last_username }}" class="shadow-sm dark:focus:ring-gray-400 dark:focus:border-gray-600 focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                    <input type="text" name="_username" id="username" value="{{ last_username }}" class="text-gray-900 shadow-sm dark:focus:ring-gray-400 dark:focus:border-gray-600 focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
                 </div>
             </div>
             <div class="my-6">
