--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -53,7 +53,7 @@
                     'label_attr': {'class': 'block text-lg md:text-md font-medium text-gray-700 dark:text-gray-300'}
                 }) }}
                 <div class="mt-1">
-                    {{ form_widget(registrationForm.avatar, {'attr': {'class': 'shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600' }}) }}
+                    {{ form_widget(registrationForm.avatar, {'attr': {'class': 'text-slate-900 shadow-sm block w-full border-gray-300 rounded-md sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-gray-400 dark:focus:border-gray-600 dark:text-gray-200' }}) }}
                 </div>
                 <span class="text-sm text-red-600 italic">
                     {{ form_errors(registrationForm.avatar) }}
