--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,4 +9,161 @@
         dark:bg-green-400
         hover:bg-green-100
     }
+    .btn-blue{
+        @apply
+            mt-3
+            w-full
+            inline-flex
+            justify-center
+            rounded-md
+            border
+            border-sky-500
+            shadow-sm
+            px-4
+            py-2
+            bg-sky-500
+            text-base
+            font-medium
+            text-white
+            dark:border-transparent
+            dark:bg-sky-700
+            dark:hover:bg-sky-800
+            dark:focus:ring-sky-900
+            hover:bg-sky-700
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-sky-500
+            sm:mt-0
+            sm:col-start-1
+            sm:text-sm
+    }
+    .btn-red {
+        @apply
+            relative
+            inline-flex
+            items-center
+            justify-center
+            px-4
+            py-2
+            border
+            border-transparent
+            shadow-sm
+            text-sm
+            font-medium
+            rounded-md
+            text-white
+            bg-red-600
+            hover:bg-red-700
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-red-500
+    }
+    .btn-green{
+        @apply
+            w-full
+            inline-flex
+            justify-center
+            rounded-md
+            border
+            border-transparent
+            shadow-sm
+            px-4
+            py-2
+            bg-emerald-600
+            text-base
+            font-medium
+            text-white
+            dark:bg-emerald-700
+            dark:hover:bg-emerald-800
+            dark:focus:ring-emerald-900
+            hover:bg-emerald-700
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-emerald-500
+            sm:col-start-2
+            sm:text-sm
+    }
+    .login-btn-blue{
+        @apply
+            w-2/4
+            block
+            mx-auto
+            justify-center
+            rounded-md
+            border
+            border-sky-500
+            shadow-sm
+            px-4
+            py-2
+            bg-sky-500
+            text-base
+            font-medium
+            text-white
+            dark:border-transparent
+            dark:bg-sky-700
+            dark:hover:bg-sky-800
+            dark:focus:ring-sky-900
+            hover:bg-sky-700
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-sky-500
+            sm:mt-0 sm:col-start-1
+            sm:text-sm
+    }
+    .btn-feed-received {
+        @apply
+            w-2/4
+            inline-flex
+            justify-center
+            items-center
+            rounded-md
+            border
+            border-transparent
+            px-4
+            py-2
+            text-base
+            text-white
+            font-medium
+            bg-teal-400
+            hover:bg-teal-500
+            focus:outline-none
+            focus:ring-teal-400
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-offset-teal-500
+            dark:focus:ring-teal-600
+            dark:hover:bg-teal-700
+            dark:text-gray-800
+            dark:bg-teal-600
+    }
+    .btn-feed-send{
+        @apply
+            w-2/4
+            inline-flex
+            justify-center
+            items-center
+            rounded-md
+            border
+            border-transparent
+            px-4
+            py-2
+            text-base
+            text-white
+            font-medium
+            bg-violet-400
+            hover:bg-violet-500
+            focus:outline-none
+            focus:ring-2
+            focus:ring-offset-2
+            focus:ring-offset-violet-700
+            focus:ring-violet-400
+            dark:text-gray-800
+            dark:bg-violet-500
+            dark:focus:ring-violet-600
+            dark:hover:bg-violet-600
+    }
 }
