--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="flex flex-col justify-center py-6">
-                <button type="submit" class="w-2/4 block mx-auto justify-center rounded-md border border-shy-500 shadow-sm px-4 py-2 bg-sky-500 text-base font-medium text-white dark:border-transparent dark:bg-sky-700 dark:hover:bg-sky-800 dark:focus:ring-sky-900 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-sky-500 sm:mt-0 sm:col-start-1 sm:text-sm">Connection</button>
+                <button type="submit" class="login-btn-blue">Connexion</button>
                 <a href="{{ path('app_home') }}" class="w-2/4 block mx-auto text-center my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer dark:text-gray-100">Retour Accueil</a>
             </div>
 
