--- a/templates/home/interactionPage.html.twig
+++ b/templates/home/interactionPage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Interactions{% endblock %}
-{% set name = app.user.firstname|capitalize ~ ' ' ~ app.user.lastname|capitalize %}
+
 {% block body %}
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 dark:bg-slate-700">
     <!-- User interaction --->
@@ -18,14 +18,38 @@
                                 {% endif %}
                             </div>
                             <div class="sm:col-span-2">
-                                <h2 class="text-3xl text-gray-900 font-extrabold tracking-tight sm:text-4xl dark:text-gray-300">Bonjour {{ name }}!</h2>
+                                <h2 class="text-3xl text-gray-900 font-extrabold tracking-tight sm:text-4xl dark:text-gray-300">Bonjour {{ app.user.fullName }}!</h2>
                                 <div class="space-y-4 prose">
-                                    <div class="text-lg">
-                                        <div class="text-lg leading-6 font-medium space-y-1">
-                                            <p class="text-gray-500 dark:text-gray-200">Copywriter</p>
+
+                                    <!-- Bar de progression des scores des feedbacks reçu par l'utilisateur courant --->
+                                    {% if middleScoreGradeInPercent == 0 and middleScoreGradeInPercent is defined %}
+                                        <p class="text-gray-600 dark:text-gray-400 py-3">Personne n'a encore écrit de feedback à votre sujet.</p>
+                                    {% else %}
+                                        <p class="text-gray-600 dark:text-gray-400 pt-3">Retrouver la moyenne de votre score des feedbacks attribué par l'ensemble des participants</p>
+                                        <div class="h-8 relative max-w-full rounded-full overflow-hidden pb-6">
+                                            <div class="w-full h-full bg-sky-400 bg-opacity-50 absolute"></div>
+                                            <div class="inline-flex px-2 bg-sky-600 text-sky-800 justify-start font-semibold items-center h-full absolute text-xs lg:text-md" style="width: {{ middleScoreGradeInPercent }}%;">{{ middleScoreGradeInPercent }}%</div>
                                         </div>
-                                        <p class="text-gray-600 dark:text-gray-400">Personne n'a encore écrit de feedback à votre sujet.</p>
+                                    {% endif %}
+
+                                    <div class="flex space-x-2 mt-12">
+                                        <button id="btn-feed-received" class="btn-feed-received">FeedBack Reçu</button>
+                                        <button id="btn-feed-send" class="btn-feed-send">FeedBack Envoyer</button>
                                     </div>
+
+                                    <div class="text-lg">
+                                        <div id="allFeedbackCurrent" class="text-lg leading-6 font-medium space-y-1">
+
+                                            <!-- list des feedbaks envoyer par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
+                                            {% include 'home/_card_feedbacks_list.html.twig' with { allFeeds : allFeedsSend, state: 'send', color: 'violet' } %}
+
+                                            <!-- list des feedbaks reçu par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
+                                            {% include 'home/_card_feedbacks_list.html.twig' with { allFeeds : allFeedReceived, state: 'received', color: 'emerald' } %}
+
+
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -40,7 +64,7 @@
         <div class="bg-white overflow-hidden p-4 dark:bg-slate-700">
             <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5">
                 {% for interaction in interactions %}
-                        <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow-lg divide-y divide-gray-200 dark:bg-slate-800 dark:divide-slate-900">
+                        <li class="col-span-1 flex flex-col text-center bg-gray-300 bg-opacity-30 rounded-lg shadow-lg divide-y divide-gray-200 dark:bg-slate-800 dark:divide-slate-900">
                             <div class="flex-1 flex flex-col p-8">
                                 {% if interaction.avatar is defined and interaction.avatar is not null %}
                                 <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
@@ -49,7 +73,7 @@
                                 {% else %}
                                     <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
                                          src="{{ asset('images/avatars/avatar_default.jpg') }}"
-                                         alt="">
+                                         alt="default logo">
                                 {% endif %}
                                 <h3 class="mt-6 text-gray-900 text-sm font-medium dark:text-gray-300">{{ (interaction.firstname ~ ' ' ~ interaction.lastname)|capitalize }}</h3>
                                 <!--
@@ -68,13 +92,14 @@
                             <div>
                                 <div class="feedbackButton -mt-px flex divide-x divide-gray-200">
                                     <div class="-ml-px w-0 flex-1 flex dark:hover:bg-slate-400 hover:bg-slate-700 hover:opacity-30 hover:rounded-br-lg hover:rounded-bl-lg focus:bg-slate-700  focus:opacity-30 focus:rounded-br-lg focus:rounded-bl-lg">
+
                                         <button name="user"
                                            data-uid="{{ interaction.id }}"
                                            data-firstname="{{ interaction.firstname }}"
                                            data-lastname="{{ interaction.lastname }}"
                                            data-email="{{ interaction.email }}"
                                            class="dataButtonFeedback relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-100 dark:text-gray-300 dark:hover:text-gray-100 dark:focus:text-xl dark:focus:text-gray-50">
-                                            <span class="ml-3">Feedback</span>
+                                            <span class="ml-3">Feedback ici</span>
                                         </button>
 
                                     </div>
@@ -86,7 +111,7 @@
         </div>
     </div>
 </div>
-    <!-- Modal include --->
+    <!-- Modal feedback include --->
     {{ include('home/_modal_feedback.html.twig',{ feedForm : feedForm }) }}
 {% endblock %}
 {% block javascripts %}
@@ -101,7 +126,7 @@
             cancelButton.addEventListener('click', () => {
                 modalEvent.classList.add('hidden');
             });
-            //Ouverture de la modal + Transfet de donnée utilisateur
+            //Ouverture du modal + Transfer de donnée utilisateur
             let titleModal = document.querySelector('.titleModal');
             let uidModal = document.getElementById('uid');
             let uemailModal = document.getElementById('uemail');
@@ -112,10 +137,10 @@
                     titleModal.innerHTML = u.dataset.firstname + ' ' + u.dataset.lastname;
                     uidModal.value = u.dataset.uid;
                     uemailModal.value  = u.dataset.email;
-                    console.log(uemailModal.value);
                 })
             });
 
+            // Verifier si le champ comment n'est pas vide
             let subimitButton = document.querySelector('.submited');
             let textarea = document.getElementById('feedback_comment');
             subimitButton.addEventListener('click', (e) => {
@@ -126,10 +151,38 @@
                 }
             });
 
-            window.addEventListener('load', () => {
-                textarea.value = '';
-            })
 
+            let btnFeedSend = document.getElementById('btn-feed-send');
+            let btnFeedReceived = document.getElementById('btn-feed-received');
+            btnFeedReceived.addEventListener('click', () => {
+                let cardFeddListStateReceived = document.getElementById('card-feed-list-received');
+                let cardFeddListStateSend = document.getElementById('card-feed-list-send');
+                let underProgressBar = document.querySelectorAll('.underProgresBar-received');
+                let upperProgressBar = document.querySelectorAll('.upperProgressBar-received');
+                cardFeddListStateReceived.classList.toggle('hidden');
+                underProgressBar.forEach((e) => {
+                    e.classList.add('bg-green-200');
+                });
+                upperProgressBar.forEach((u) => {
+                    u.classList.add( 'bg-green-300', 'text-green-500');
+                });
+                cardFeddListStateSend.classList.add('hidden')
+            });
+
+            btnFeedSend.addEventListener('click', () => {
+                let cardFeddListStateReceived = document.getElementById('card-feed-list-received');
+                let cardFeddListStateSend = document.getElementById('card-feed-list-send');
+                let underProgressBar = document.querySelectorAll('.underProgresBar-send');
+                let upperProgressBar = document.querySelectorAll('.upperProgressBar-send');
+                cardFeddListStateSend.classList.toggle('hidden');
+                underProgressBar.forEach((e) => {
+                    e.classList.add('bg-violet-200');
+                });
+                upperProgressBar.forEach((u) => {
+                    u.classList.add( 'bg-violet-300', 'text-violet-500');
+                });
+                cardFeddListStateReceived.classList.add('hidden')
+            });
         })
     </script>
 {% endblock %}
