--- a/templates/home/interactionPage.html.twig
+++ b/templates/home/interactionPage.html.twig
@@ -40,10 +40,10 @@
                                     <div class="text-lg">
                                         <div id="allFeedbackCurrent" class="text-lg leading-6 font-medium space-y-1">
 
-                                            <!-- list des feedbaks envoyer par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
+                                            <!-- list des feedbacks envoyés par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
                                             {% include 'home/_card_feedbacks_list.html.twig' with { allFeeds : allFeedsSend, state: 'send', color: 'violet' } %}
 
-                                            <!-- list des feedbaks reçu par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
+                                            <!-- list des feedbacks reçus par l'utilisateur courant !!! Attention si vous modifiez la couleur la condition n'est pas remplit !!! --->
                                             {% include 'home/_card_feedbacks_list.html.twig' with { allFeeds : allFeedReceived, state: 'received', color: 'emerald' } %}
 
 
