--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -27,7 +27,10 @@
                 </div>
             </div>
             <div class="flex flex-col justify-center py-6">
+                <a href="{{ path('app_forgot_password_request') }}" class="w-2/4 block mx-auto text-center my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer dark:text-gray-100">Mot de passe oublier</a>
+
                 <button type="submit" class="login-btn-blue">Connexion</button>
+
                 <a href="{{ path('app_home') }}" class="w-2/4 block mx-auto text-center my-3 underline underline-offset-2 text-lg md:text-md hover:cursor-pointer dark:text-gray-100">Retour Accueil</a>
             </div>
 
