--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,26 +1,26 @@
 <div class="bg-white px-4 py-6 border-b border-gray-200 sm:px-6 dark:bg-slate-600 dark:border-gray-800">
     <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-nowrap">
         <div class="ml-4 mt-2 flex gap-6">
-            <h3 class="text-2xl leading-6 font-medium font-extrabold text-indigo-600">Interactions Lab</h3>
+            <a href='{{ path('app_interactions') }}' class="text-3xl leading-6 font-medium font-extrabold text-indigo-600 dark:text-indigo-900">Interactions Lab</a>
             <div id="moon" class="flex space-x-2 text-slate-800 hover:cursor-pointer hover:text-slate-700">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
                 </svg>
-                <span>Dark</span>
+                <span class='font-extrabold'>Dark</span>
             </div>
             <div id="sun" class="flex space-x-1 text-sky-500 hover:cursor-pointer hover:text-sky-300">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
                 </svg>
-                <span class="">Light</span>
+                <span class="font-extrabold">Light</span>
             </div>
         </div>
         <div class="ml-4 mt-2 flex-shrink-0">
             {% if app.user %}
-            <a href='{{ path('app_profile') }}' class=''>Profile</a>
-            <a href="{{ path('app_logout') }}" class="btn-red">Déconnexion</a>
+                <a href='{{ path('app_profile') }}' class='btn-profile font-extrabold'>Profile</a>
+                <a href="{{ path('app_logout') }}" class="btn-red font-extrabold">Déconnexion</a>
             {% else %}
-            <a href="{{ path('app_login') }}" class="btn-blue">Connexion</a>
+                <a href="{{ path('app_login') }}" class="btn-blue font-extrabold">Connexion</a>
             {% endif %}
 
         </div>
