--- a/templates/home/_button_registerOrConnected.html.twig
+++ b/templates/home/_button_registerOrConnected.html.twig
@@ -10,11 +10,11 @@
         </div>
         <div class="mt-5 sm:mt-6 grid {{ app.user ? 'grid-cols-1' : 'grid-cols-2' }}  gap-3 grid-flow-row-dense">
             {% if app.user %}
-                <a href="{{ path('app_interactions') }}" class="btn-blue">InteractionLab</a>
-                <a href="{{ path('app_logout') }}" class="btn-deconnected-home-page">Déconnexion</a>
+                <a href="{{ path('app_interactions') }}" class="btn-blue font-extrabold">InteractionLab</a>
+                <a href="{{ path('app_logout') }}" class="btn-deconnected-home-page font-extrabold">Déconnexion</a>
             {% else %}
-                <a href="{{ path('app_register') }}" class="btn-green">Inscription</a>
-                <a href="{{ path('app_login') }}" class="btn-blue">Connexion</a>
+                <a href="{{ path('app_register') }}" class="btn-green font-extrabold">Inscription</a>
+                <a href="{{ path('app_login') }}" class="btn-blue font-extrabold">Connexion</a>
             {% endif %}
         </div>
     </div>
