--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,8 +6,7 @@
     {% for flash_error in app.flashes('verify_email_error') %}
         {% include '_alert.html.twig' with {'color': 'red', 'flashText': flash_error} %}
     {% endfor %}
-    <h2 class="m-5 leading-6 text-indigo-600 font-semibold tracking-wide uppercase">Interations Lab</h2>
-    <div class="max-w-full mx-10 lg:max-w-md lg:mx-auto">
+    <div class="max-w-full mx-10 py-10 lg:max-w-md lg:mx-auto">
 
         <h1 class="my-3 font-bold text-2xl md:text-4xl dark:text-gray-300">Inscription</h1>
         <h3 class="my-2 text-xl md:text-2xl font-light dark:text-gray-100">Créer votre compte Interactions Lab</h3>
