--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
             {{ encore_entry_script_tags('global') }}
         {% endblock %}
     </head>
-    <body class="h-full dark:bg-slate-700">
+    <body class="h-full dark:bg-slate-700 transition duration-200 ease-in-out">
         {% block header %}
             {% include '_header.html.twig' %}
         {% endblock %}
