--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-white px-4 py-6 border-b border-gray-200 sm:px-6 dark:bg-slate-600 dark:border-gray-800">
+<div class="bg-white px-4 py-6 border-b border-gray-200 sm:px-6 dark:bg-slate-600 dark:border-gray-800 transition duration-200 ease-in-out">
     <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-nowrap">
         <div class="ml-4 mt-2 flex gap-6">
             <a href='{{ path('app_interactions') }}' class="text-3xl leading-6 font-medium font-extrabold text-indigo-600 dark:text-indigo-900">Interactions Lab</a>
