--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11,7 +11,6 @@
     }
     .btn-blue {
         @apply
-            mt-3
             w-full
             inline-flex
             justify-center
@@ -253,4 +252,9 @@
             dark:hover:bg-slate-500
             sm:text-base
     }
+}
+
+#feedback-comment {
+    overflow-wrap: break-word !important;
+    word-break: break-word;
 }
