--- a/templates/includes/_card_content_profile.html.twig
+++ b/templates/includes/_card_content_profile.html.twig
@@ -2,8 +2,10 @@
 	<div class="flex-1 flex items-center justify-between rounded-lg truncate">
 		<div class="flex-1 px-4 py-2 text-sm truncate prose">
 			{% include 'includes/_start_rate.html.twig' with { idGrade:'rate_profil_star', scoreGrade:feedback.grade, class:'profil_page', size_start:'star_profil' } %}
-			<p class="text-gray-900 font-medium dark:text-gray-300">Commentaire :</p>
-			<p class="text-gray-900 font-medium dark:text-gray-300 w-3">{{ feedback.comment }}</p>
+			<div class=''>
+				<p class="text-gray-900 font-medium dark:text-gray-300">Commentaire :</p>
+				<p id='feedback-comment' class="text-gray-900 font-medium dark:text-gray-300">{{ feedback.comment }}</p>
+			</div>
 			<p class="text-sm text-gray-500/50 dark:text-white/25 mt-3"><span class='font-extrabold'>{{ feedback.createdAt|date("d/m/Y", "Europe/Paris") }}</span> | {{ fullname }}</p>
 		</div>
 	</div>
