--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -75,8 +75,25 @@
 
 		<div class="px-10 py-10 lg:py-12 lg:px-5 flex flex-col w-0 flex-1">
 
-			<div id='block_recap' class='bg-gray-200'>
-				<p>Block Recap</p>
+			<div id='block_recap' class='flex flex-row justify-around mb-5'>
+				<div class='text-center'>
+					<p class='text-gray-900 text-xl sm:text-6xl font-semibold dark:text-gray-300'>{{ userSubscribe }}</p>
+					<p class='text-gray-900 dark:text-gray-300'>Participants</p>
+				</div>
+				<div class='text-center'>
+					<p class='text-gray-900 text-xl sm:text-6xl font-semibold dark:text-gray-300'>{{ allIssues|length }}</p>
+					<p class='text-gray-900 dark:text-gray-300'>FeedBacks</p>
+				</div>
+			</div>
+			<div id='recap' class='flex flex-row justify-around mt-5'>
+				<div class='text-center'>
+					<p class='text-xl sm:text-6xl font-semibold dark:text-gray-300'>{{ allIssuesCurrentUser|length }}</p>
+					<p class='text-gray-900 dark:text-gray-300'>FeedBacks Envoyés</p>
+				</div>
+				<div class='text-center'>
+					<p class='text-xl sm:text-6xl font-semibold dark:text-gray-300'>{{ allReceivesCurrentUser|length }}</p>
+					<p class='text-gray-900 dark:text-gray-300'>FeedBacks Reçus</p>
+				</div>
 			</div>
 
 			<div id='block_feedSend' class='my-3'>
@@ -84,16 +101,18 @@
 					<div class='w-full'>
 						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Tous vos feedbacks envoyés</h2>
 						<div class='py-10'>
+							{% if allIssuesCurrentUser|length >= 1 %}
 							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4 ">
-							{% if allIssues|length >= 1 %}
-								{% for allIssue in allIssues %}
+								{% for allIssue in allIssuesCurrentUser %}
 									{% include 'includes/_card_content_profile.html.twig' with { feedback: allIssue, fullname: allIssue.received.fullname } %}
 								{% endfor %}
-							{% else %}
-								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez envoyé aucun feedback</p>
-								<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
-							{% endif %}
 							</ul>
+							{% else %}
+								<div class='flex flex-col space-y-8 items-center justify-center'>
+									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez envoyé aucun feedback</p>
+									<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
+								</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -102,16 +121,18 @@
 					<div class='w-full'>
 						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks envoyés, ces 15 derniers jours</h2>
 						<div class='py-10'>
-							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 ">
 							{% if issuesBetweenDate15|length >= 1 %}
+							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 ">
 								{% for issueBetweenDate in issuesBetweenDate15 %}
 									{% include 'includes/_card_content_profile.html.twig' with { feedback: issueBetweenDate, fullname: issueBetweenDate.received.fullname } %}
 								{% endfor %}
-							{% else %}
-								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais durant ces 15 derniers jours, vous n'avez envoyé aucun feedback</p>
-								<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
-							{% endif %}
 							</ul>
+							{% else %}
+								<div class='flex flex-col space-y-8 items-center justify-center'>
+									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais durant ces 15 derniers jours, vous n'avez envoyé aucun feedback</p>
+									<a href='{{ path('app_interactions') }}' class='btn-profile font-extrabold'>Démarrer</a>
+								</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -120,16 +141,18 @@
 					<div class='w-full'>
 						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks envoyés, ces 30 derniers jours</h2>
 						<div class='py-10'>
+							{% if issuesBetweenDate30|length >= 1 %}
 							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 ">
-								{% if issuesBetweenDate30|length >= 1 %}
 									{% for issueBetweenDate30 in issuesBetweenDate30 %}
 										{% include 'includes/_card_content_profile.html.twig' with { feedback: issueBetweenDate30, fullname: issueBetweenDate30.received.fullname } %}
 									{% endfor %}
-								{% else %}
+							</ul>
+							{% else %}
+								<div class='flex flex-col space-y-8 items-center justify-center'>
 									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais durant ces 30 derniers jours, vous n'avez envoyé aucun feedback, ça commence à faire long là...</p>
 									<a href='{{ path('app_interactions') }}' class='btn-red font-extrabold'>Démarrer</a>
-								{% endif %}
-							</ul>
+								</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -141,15 +164,17 @@
 					<div class='w-full'>
 						<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Tous vos feedbacks reçus</h2>
 						<div class='py-10'>
+							{% if allReceivesCurrentUser|length >= 1 %}
 							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-3 gap-3 sm:gap-4 ">
-							{% if allReceives|length >= 1 %}
-								{% for allReceive in allReceives %}
+								{% for allReceive in allReceivesCurrentUser %}
 									{% include 'includes/_card_content_profile.html.twig' with { feedback: allReceive, fullname: allReceive.issue.fullname } %}
 								{% endfor %}
-							{% else %}
-								<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez reçu aucun feedback fait le savoir autour de vous</p>
-							{% endif %}
 							</ul>
+							{% else %}
+								<div class='flex flex-col space-y-8 items-center justify-center'>
+									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis le début de l'XP, vous n'avez reçu aucun feedback fait le savoir autour de vous</p>
+								</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
@@ -157,22 +182,34 @@
 					<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks reçus, ces 15 derniers jours</h2>
 					<div class='w-full'>
 						<div class='py-10'>
+							{% if receivedsBetweenDate15|length >= 1 %}
 							<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
-								{% for receivedBetweenDate15 in receivedsBetweenDate15 %}
-									{% include 'includes/_card_content_profile.html.twig' with { feedback: receivedBetweenDate15, fullname: receivedBetweenDate15.issue.fullname } %}
-								{% endfor %}
+									{% for receivedBetweenDate15 in receivedsBetweenDate15 %}
+										{% include 'includes/_card_content_profile.html.twig' with { feedback: receivedBetweenDate15, fullname: receivedBetweenDate15.issue.fullname } %}
+									{% endfor %}
 							</ul>
+							{% else %}
+								<div class='flex flex-col space-y-8 items-center justify-center'>
+									<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis ces 15 derniers jours, vous n'avez reçu aucun feedback...</p>
+								</div>
+							{% endif %}
 						</div>
 					</div>
 				</div>
 				<div id='days_received_30' class='hidden px-2 py-3 my-4 rounded-md'>
 					<h2 class='text-2xl text-gray-900 font-extrabold tracking-tight sm:text-3xl dark:text-gray-300'>Vos feedbacks reçus, ces 30 derniers jours</h2>
 					<div class='py-10'>
-					<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4 ">
+					{% if receivedsBetweenDate30|length >= 1 %}
+					<ul role="list" class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 sm:gap-4">
 						{% for receivedBetweenDate30 in receivedsBetweenDate30 %}
 							{% include 'includes/_card_content_profile.html.twig' with { feedback: receivedBetweenDate30, fullname: receivedBetweenDate30.issue.fullname } %}
-						{% endfor %}
+					{% endfor %}
 					</ul>
+						{% else %}
+						<div class='flex flex-col space-y-8 items-center justify-center'>
+							<p class="text-gray-900 font-medium dark:text-gray-300">Désolé, mais depuis ces 30 derniers jours, vous n'avez reçu aucun feedback ça fait un beaucoup là...</p>
+						</div>
+					{% endif %}
 				</div>
 				</div>
 			</div>
